--- a/apps/frontend/src/index.html
+++ b/apps/frontend/src/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
     <title>TSWGO Portal</title>
@@ -12,5 +11,4 @@
   <body>
     <div id="root"></div>
   </body>
-
 </html>
