Revert "ran prettier"
This reverts commit 1707be52ee37c094af40c55010d9aea4d0dc9073.

--- a/apps/frontend/src/index.html
+++ b/apps/frontend/src/index.html
@@ -1,5 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <title>TSWGO Portal</title>
@@ -11,4 +12,5 @@
   <body>
     <div id="root"></div>
   </body>
+
 </html>
